--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ a {
 	
   #navbar {
 	display: flex;
+  transition-duration: 2s;
 	justify-content: center; 
 	align-items: center; 
 	position: fixed;
@@ -94,7 +95,15 @@ a {
     font-family: Poppins, sans-serif;
   }
   .parallax-container>h1, .parallax-container>h4 {
-	 mix-blend-mode: difference;
+	 /* mix-blend-mode: difference; */
+   color: #ff2424;
+    text-shadow:
+    /* 3px 3px 0 #fff, */
+    -1px -1px 1px #fff,
+    4px 4px 4px #000;
+    /* 3px -3px 0 #fff; */
+
+
   }
 
   .parallax-container>h1{
@@ -114,7 +123,7 @@ a {
   
     /*  this is where the magic happens:  */
     background-attachment: fixed;
-    background-image: url("images/img355.png"); 
+    background-image: url("images/pond.jpg"); 
     background-position: center;
     background-size: cover;
     color: white;
@@ -122,13 +131,10 @@ a {
   
     text-align: center;
   }
+
   
-  .buffer {
-    width: 100%;
-    min-height: 60vh;
-    background-color: var(--color);
-  }
   
+
   .parallax-container2 {
     flex-direction: row;
     flex-wrap: wrap;
@@ -152,7 +158,7 @@ a {
     max-width: 52ch;
     padding: 1em;
     line-height: 1.5;
-	color: white;
+  	color: white;
   }
 
   h4 {
