--- a/styles.css
+++ b/styles.css
@@ -194,7 +194,7 @@ a {
 	max-width: 500px;
     padding-bottom: 1rem;
     border-radius: 0.5em;
-  
+    padding-bottom: 5rem;
     background-color: #244855;
     box-shadow: 0 29px 38px -15px rgb(0 0 0 / 43%);
   }
@@ -215,15 +215,15 @@ a {
   }
   
   .card:nth-of-type(1) .card-img {
-	background-image: url("images/minuteman.jpg");
+	background-image: url("images/equaleyes.jpeg");
 }
   
   .card:nth-of-type(2) .card-img {
-    background-image: url("https://miro.medium.com/v2/resize:fit:720/format:webp/1*GRljCZx9fe_t_4vL_1imAQ.png");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/1/10/Connect_Four%2C_John_Slegers.png");
   }
   
   .card:nth-of-type(3) .card-img {
-    background-image: url("../images/mockWorld.png");
+    background-image: url("images/flask.jpeg");
   }
   
   .card:nth-of-type(4) .card-img {
@@ -236,11 +236,10 @@ a {
     .parallax-container {
       background-attachment: scroll;
     }
-	.card{
-		
-	max-height: 1200px;
-
+	.card {
+	  max-height: 1200px;
   } 
+  
   }
         
   @media screen and (max-width: 600px) {
