--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,14 @@ a {
 	height: 8rem;
   }
   
+  .name {
+
+
+  background-color: rgba(0, 0, 0, 0.5);
+  font-family: "Bree Serif", serif;
+  font-weight: 400;
+  font-style: normal;
+  }
 
   
   #navbar nav button {
@@ -94,17 +102,7 @@ a {
     margin: 0;
     font-family: Poppins, sans-serif;
   }
-  .parallax-container>h1, .parallax-container>h4 {
-	 /* mix-blend-mode: difference; */
-   color: #ff2424;
-    text-shadow:
-    /* 3px 3px 0 #fff, */
-    -1px -1px 1px #fff,
-    4px 4px 4px #000;
-    /* 3px -3px 0 #fff; */
-
-
-  }
+ 
 
   .parallax-container>h1{
 	font-size: 10rem;
