--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ a {
   
     /*  this is where the magic happens:  */
     background-attachment: fixed;
-    background-image: url("images/pond.jpg"); 
+    background-image: url("images/hero-image.jpg"); 
     background-position: center;
     background-size: cover;
     color: white;
